--- a/client/src/index.html
+++ b/client/src/index.html
@@ -7,6 +7,11 @@
 <body>
     <div id="root">
     </div>
+    <script>
+        window.config = {
+            apiUrl: "<%= apiUrl %>",
+        }
+    </script>
     <script src="/assets/main.bundle.js"></script>
 </body>
 </html>
