Fix images fetching in non-dev env

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -12,6 +12,6 @@
             apiUrl: "<%= apiUrl %>",
         }
     </script>
-    <script src="/assets/main.bundle.js"></script>
+    <script src="/dist/main.bundle.js"></script>
 </body>
 </html>
