--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Dictionary</title>
+    <title>Dictify</title>
 </head>
 <body>
     <div id="root">
